<resources>
    <string name="app_name">Footpoly</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="offline">Play Offline</string>
    <string name="load">Load Game</string>
    <string name="online">Play Online</string>
    <string name="instructions">Instructions</string>
    <string name="exit">Exit</string>

    <string name="play">Play</string>

    <string name="title_activity_game">GameActivity</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>

    <string name="dialogBuy">Buy</string>
    <string name="dialogNoBuy">No</string>

    <string name="menu">Menu</string>

    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>

    <string name="mortgage">Mortgage</string>
    <string name="buyStadium">Buy Stadium</string>
    <string name="upgradeStadium">Upgrade Stadium</string>
    <string name="endRound">End Round</string>

    <string name="title_activity_offline_game_settings">OfflineGameSettingsActivity</string>

    <string name="instructionsText">"In each round you must spin the dice by clicking the button in the center of the table.\nYou can mortgage your stadiums by clicking the button and selecting the desired one(s).\nYou can upgrade a stadium if you have 2 or more stadiums of that country.\nIf you save the game, you will end your turn."</string>
</resources>
