<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".view.MenuActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->
    <TextView
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:keepScreenOn="true"
        android:text="@string/dummy_content"
        android:textColor="#33b5e5"
        android:textSize="50sp"
        android:textStyle="bold" />

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:background="@drawable/background">

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            style="?metaButtonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/black_overlay"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <Button
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:theme="@style/Button"
                android:text="@string/offline"
                android:id="@+id/offlineButton"
                android:layout_gravity="center"
                android:layout_centerHorizontal="true" />

            <Button
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:theme="@style/Button"
                android:text="@string/load"
                android:id="@+id/loadButton"
                android:layout_gravity="center"
                android:layout_alignStart="@+id/offlineButton"
                android:layout_below="@+id/offlineButton"
                android:layout_marginTop="15dp" />

            <!--
            <Button
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:theme="@style/Button"
                android:text="@string/online"
                android:id="@+id/onlineButton"
                android:layout_gravity="center"
                android:layout_alignStart="@+id/loadButton"
                android:layout_below="@+id/loadButton"
                android:layout_marginTop="15dp" />
                -->

            <Button
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:theme="@style/Button"
                android:text="@string/instructions"
                android:id="@+id/instructionsButton"
                android:layout_gravity="center"
                android:layout_alignStart="@+id/loadButton"
                android:layout_below="@+id/loadButton"
                android:layout_marginTop="15dp" />

            <Button
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:theme="@style/Button"
                android:text="@string/exit"
                android:id="@+id/exitButton"
                android:layout_gravity="center"
                android:layout_alignStart="@+id/instructionsButton"
                android:layout_below="@+id/instructionsButton"
                android:layout_marginTop="15dp" />
        </RelativeLayout>
    </FrameLayout>

</FrameLayout>
