<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    tools:context=".view.GameActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->
    <TextView
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:keepScreenOn="true"
        android:textColor="#33b5e5"
        android:textSize="50sp"
        android:textStyle="bold" />

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            style="?metaButtonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/black_overlay"
            android:orientation="horizontal"
            tools:ignore="UselessParent">
        </LinearLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/table"
                android:layout_gravity="center"
                android:src="@drawable/table" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/pino1"
                android:layout_marginTop="64dp"/>

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/pino2"
                android:layout_marginTop="64dp"
                android:layout_marginStart="325dp"/>

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/pino3"
                android:layout_marginTop="93dp"/>

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/pino4"
                android:layout_marginTop="93dp"
                android:layout_marginStart="30dp"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_gravity="bottom"
            android:id="@+id/linearLayout">

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".25"
                android:theme="@style/Button"
                android:text="@string/mortgage"
                android:textSize="13dp"
                android:id="@+id/mortgageButton" />

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".25"
                android:theme="@style/Button"
                android:text="@string/buyStadium"
                android:textSize="13dp"
                android:id="@+id/buyStadiumButton" />

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".25"
                android:theme="@style/Button"
                android:text="@string/upgradeStadium"
                android:textSize="13dp"
                android:id="@+id/upgradeStadiumButton" />

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".25"
                android:theme="@style/Button"
                android:text="@string/endRound"
                android:textSize="13dp"
                android:id="@+id/endRoundButton" />
        </LinearLayout>


        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="0, 1"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="Player 1: 5000"
                    android:id="@+id/player1Balance"
                    android:textSize="20sp"
                    android:gravity="top"
                    android:textColor="@color/balanceColor"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="Player 3: 5000"
                    android:id="@+id/player3Balance"
                    android:textSize="20sp"
                    android:textColor="@color/balanceColor"
                    android:layout_gravity="right"/>
            </TableRow>

            <TableRow
                android:layout_marginTop="-20dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="Player 2: 5000"
                    android:id="@+id/player2Balance"
                    android:layout_marginTop="25dp"
                    android:textSize="20sp"
                    android:textColor="@color/balanceColor"/>



                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="Player 4: 5000"
                    android:id="@+id/player4Balance"
                    android:layout_marginTop="25dp"
                    android:gravity="right"
                    android:textSize="20sp"
                    android:textColor="@color/balanceColor"/>

            </TableRow>



        </TableLayout>


    </FrameLayout>

</FrameLayout>
